remove unused endpoints & methods